--- a/src/Listreat/MainBundle/Resources/views/Shop/list.html.twig
+++ b/src/Listreat/MainBundle/Resources/views/Shop/list.html.twig
@@ -4,7 +4,7 @@
 
 {% block content %}
 <br/>
-<h1>Shops List</h1>
+<h1>Shops List:</h1>
 
 <div id="item-list">
     {% for shop in shops %}
@@ -48,6 +48,17 @@
                 <h3>{{f.friend.username}}</h3>
                 <p>email: {{f.friend.email}}</p>
             </div>
+        </div>
+    {% endfor %}
+</div>
+
+<br/><br/>
+<h1>Tags:</h1>
+
+<div>
+    {% for tag in tags %}
+        <div class="tag-list">
+            <h3>{{tag.name}}</h3>
         </div>
     {% endfor %}
 </div>
