--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -5,7 +5,8 @@
         <title>{% block title %}LisTreat{% endblock %}</title>
         {% block stylesheets %}
             <link rel="stylesheet" href="{{ asset('bundles/webprofiler/css/profiler.css') }}" type="text/css" media="all" />
-            <link rel="stylesheet" href="{{ asset('bundles/webprofiler/css/theme/jquery-custom.min.css') }}" type="text/css" media="all" />
+            <link rel="stylesheet" href="{{ asset('bundles/webprofiler/css/theme/jquery-ui-1.10.3.custom.min.css') }}" type="text/css" media="all" />
+            <link href="{{ asset('bundles/webprofiler/css/jquery.tagit.css') }}" rel="stylesheet" type="text/css">
         {% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
@@ -43,8 +44,14 @@
         {% endblock %}
             
         {% block javascripts %}
-            <script src={{asset('bundles/webprofiler/js/jquery-1.9.1.js')}}></script>
-            <script src={{asset('bundles/webprofiler/js/jquery-ui-1.10.2.custom.min.js')}}></script>
+            <script src={{asset('bundles/webprofiler/js/jquery-1.9.1.min.js')}}></script>
+            <script src={{asset('bundles/webprofiler/js/jquery-ui-1.10.3.custom.min.js')}}></script>
+            <script src="{{asset('bundles/webprofiler/js/tag-it.js')}}" type="text/javascript" charset="utf-8"></script>
+            <script type="text/javascript">
+                $(document).ready(function() {
+                    $("#Tags").tagit();
+                });
+            </script>
         {% endblock %}
     </body>
 </html>
